--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 		<title><%= htmlWebpackPlugin.options.title %></title>
 		<meta property="og:title" content="Pokémon Favorites Game" />
+		<meta property="twitter:title" content="Pokémon Favorites Game" />
 	</head>
 	<body>
 		<noscript>
