--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 		<title><%= htmlWebpackPlugin.options.title %></title>
-		<meta property="og:title" content="website" />
-		<meta property="og:type" content="Pokémon Favorites Game" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Pokémon Favorites Game" />
 		<meta property="og:description" content="Test coc" />
 	</head>
 	<body>
